scroll_aquatic_xxiii hoops

--- a/eventTabs/scroll_aquatic_xxiii_/hoops.html
+++ b/eventTabs/scroll_aquatic_xxiii_/hoops.html
@@ -31,386 +31,386 @@ var currencies = {
 
 var chests = {
     "scroll_aquatic_xxiii_": [
-        {
-            "img": "https://i.ibb.co/R2PZsp9/chest-1.png", // HOTOVO
+    {
+            "img": "https://i.ibb.co/2yZV9Wj/EL-stranka-scroll-aquatic-chest2.png",  //HOTOVO
+            "ec": 23,
+            "ep": 1,
+            "chances": [
+            {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 5
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 30,
+        "percentage": 12
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "runeShard",
+        "subType": "random",
+        "amount": 1,
+        "percentage": 23
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_RF_CN_5",
+        "amount": 1,
+        "percentage": 25
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_barracks_HM",
+        "amount": 6,
+        "percentage": 35
+      }
+            ],
+            "id": "reward_pool_event_chest_a_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png", //HOTOVO
+            "ec": 20,
+            "ep": 1,
+            "chances": [
+            {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 6
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_RF_CN_15",
+        "amount": 1,
+        "percentage": 16
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "spell_knowledge_boost_1",
+        "amount": 1,
+        "percentage": 22
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_seeds",
+        "amount": 5,
+        "percentage": 28
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_barracks_HR",
+        "amount": 5,
+        "percentage": 28
+      }
+            ],
+            "id": "reward_pool_event_chest_b_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/WgLLt35/EL-stranka-scroll-aquatic-chest4.png",  //HOTOVO
+            "ec": 30,
+            "ep": 1,
+            "chances": [
+            {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 11
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 40,
+        "percentage": 11
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "combiningcatalyst",
+        "amount": 1,
+        "percentage": 19
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "knowledge_points",
+        "amount": 3,
+        "percentage": 22
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_mana",
+        "amount": 4,
+        "percentage": 37
+      }
+            ],
+            "id": "reward_pool_event_chest_c_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/Wg5MjRV/EL-stranka-scroll-aquatic-chest3.png",  //HOTOVO
             "ec": 28,
             "ep": 1,
             "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 7
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "25",
-       "percentage": 10
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_orcs",
-       "amount": "3",
-       "percentage": 27
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "runeShard",
-       "subType": "random",
-       "amount": "1",
-       "percentage": 27
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_RF_CN_5",
-       "amount": "1",
-       "percentage": 29
-     }
-   ],
-            "id": "reward_pool_event_chest_a_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/2NcgTxk/chest-0.png", // HOTOVO
-            "ec": 24,
-            "ep": 1,
-            "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 6
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "spell_knowledge_boost_1",
-       "amount": "1",
-       "percentage": 19
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_barracks_HM",
-       "amount": "5",
-       "percentage": 20
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_barracks_HR",
-       "amount": "5",
-       "percentage": 20
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_RF_CN_10",
-       "amount": "1",
-       "percentage": 35
-     }
-   ],
-            "id": "reward_pool_event_chest_b_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/Pj40Tyw/chest-2.png", // HOTOVO
-            "ec": 34,
-            "ep": 1,
-            "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 9
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "30",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_KP_AW_3",
-       "amount": "1",
-       "percentage": 25
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "knowledge_points",
-       "amount": "3",
-       "percentage": 25
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_mana",
-       "amount": "4",
-       "percentage": 26
-     }
-   ],
-            "id": "reward_pool_event_chest_c_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/RbgNfRN/chest-5.png", // HOTOVO
-            "ec": 76,
-            "ep": 3,
-            "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 11
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "50",
-       "percentage": 20
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_KP_AW_10",
-       "amount": "1",
-       "percentage": 25
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "knowledge_points",
-       "amount": "10",
-       "percentage": 44
-     }
-   ],
+            {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 8
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 50,
+        "percentage": 12
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_KP_AW_3",
+        "amount": 1,
+        "percentage": 36
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "knowledge_points",
+        "amount": 2,
+        "percentage": 44
+      }
+            ],
             "id": "reward_pool_event_chest_d_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/nnK6VrW/chest-3.png", // HOTOVO
-            "ec": 51,
+          },
+          {
+            "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",  //
+            "ec": 45,
             "ep": 2,
             "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_sentient_q_1_plus_1",
-       "amount": "5",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_barracks_HR",
-       "amount": "5",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_barracks_LM",
-       "amount": "5",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_RF_SPL_25",
-       "amount": "1",
-       "percentage": 40
-     }
-   ],
+            {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 13
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_RF_SPL_33",
+        "amount": 2,
+        "percentage": 17
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_sentient_q_1_plus_1",
+        "amount": 8,
+        "percentage": 23
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_barracks_HR",
+        "amount": 8,
+        "percentage": 23
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_barracks_LM",
+        "amount": 9,
+        "percentage": 24
+      }
+            ],
             "id": "reward_pool_event_chest_e_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/gRPS6X6/chest-4.png", // HOTOVO
-            "ec": 62,
+          },
+          {
+            "img": "https://i.ibb.co/ctJJCXd/EL-stranka-scroll-aquatic-chest7.png",  //HOTOVO
+            "ec": 60,
             "ep": 2,
             "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "spell_pet_food_1",
-       "amount": "1",
-       "percentage": 3
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "75",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_RF_SPL_25",
-       "amount": "1",
-       "percentage": 27
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "spell_good_production_boost_1",
-       "amount": "1",
-       "percentage": 40
-     }
-   ],
+            {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 12
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 80,
+        "percentage": 13
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "knowledge_points",
+        "amount": 12,
+        "percentage": 22
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "spell_good_production_boost_1",
+        "amount": 1,
+        "percentage": 25
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "runeShard",
+        "subType": "random",
+        "amount": 1,
+        "percentage": 28
+      }
+            ],
             "id": "reward_pool_event_chest_f_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/FYsWZF8/chest-6.png", // HOTOVO
-            "ec": 82,
+          },
+          {
+            "img": "https://i.ibb.co/Phn0k6y/EL-stranka-scroll-aquatic-chest6.png",  //HOTOVO
+            "ec": 58,
+            "ep": 2,
+            "chances": [
+            {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 120,
+        "percentage": 9
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_KP_AW_10",
+        "amount": 2,
+        "percentage": 15
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 19
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_RF_CN_15",
+        "amount": 1,
+        "percentage": 22
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_standard_q_2_plus_2",
+        "amount": 9,
+        "percentage": 35
+      }
+            ],
+            "id": "reward_pool_event_chest_g_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/KmqZxpL/EL-stranka-scroll-aquatic-chest8.png",  //HOTOVO
+            "ec": 73,
             "ep": 3,
             "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "150",
-       "percentage": 10
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_standard_q_2_plus_2",
-       "amount": "10",
-       "percentage": 10
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 15
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_KP_AW_20",
-       "amount": "1",
-       "percentage": 30
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_RF_CN_15",
-       "amount": "2",
-       "percentage": 35
-     }
-   ],
-            "id": "reward_pool_event_chest_g_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/0XmZ9tS/chest-7.png", // HOTOVO
-            "ec": 103,
-            "ep": 4,
-            "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "flexible_reward",
-       "subType": "frog_grr_5",
-       "amount": "1",
-       "percentage": 10
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "100",
-       "percentage": 20
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_KP_AW_15",
-       "amount": "1",
-       "percentage": 22
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 23
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "knowledge_points",
-       "amount": "10",
-       "percentage": 25
-     }
-   ],
+            {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 180,
+        "percentage": 6
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_KP_AW_15",
+        "amount": 2,
+        "percentage": 19
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_RF_SPL_25",
+        "amount": 1,
+        "percentage": 23
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 24
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_seeds",
+        "amount": 8,
+        "percentage": 28
+      }
+            ],
             "id": "reward_pool_event_chest_h_scroll_aquatic"
-        },
-        {
-            "img": "https://i.ibb.co/w7FdnKm/chest-8.png", // HOTOVO
-            "ec": 126,
-            "ep": 5,
+          },
+          {
+            "img": "https://i.ibb.co/Wn8Q2DC/EL-stranka-scroll-aquatic-chest9.png",  //HOTOVO
+            "ec": 77,
+            "ep": 3,
             "chances": [
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_RF_GRR_10",
-       "amount": "1",
-       "percentage": 5
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "event_currency_1",
-       "amount": "200",
-       "percentage": 10
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "episodic",
-       "subType": "daily_reward_event_chest_theater_easter",
-       "amount": "1",
-       "percentage": 20
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "item",
-       "subType": "INS_KP_AW_20",
-       "amount": "1",
-       "percentage": 30
-     },
-     {
-       "__class__": "RewardChanceVO",
-       "type": "good",
-       "subType": "knowledge_points",
-       "amount": "15",
-       "percentage": 35
-     }
-   ],
+            {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "event_currency_1",
+        "amount": 200,
+        "percentage": 6
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "item",
+        "subType": "INS_KP_AW_20",
+        "amount": 1,
+        "percentage": 18
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "episodic",
+        "subType": "daily_reward_event_chest_scroll_aquatic",
+        "amount": 1,
+        "percentage": 21
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "good",
+        "subType": "knowledge_points",
+        "amount": 10,
+        "percentage": 25
+      },
+      {
+        "__class__": "RewardChanceVO",
+        "type": "flexible_reward",
+        "subType": "frog_barracks_LR",
+        "amount": 10,
+        "percentage": 30
+      }
+            ],
             "id": "reward_pool_event_chest_i_scroll_aquatic"
-        },
+          },
     ]
 }
 
