hoops small update

--- a/eventTabs/scroll_aquatic_xxiii_/hoops.html
+++ b/eventTabs/scroll_aquatic_xxiii_/hoops.html
@@ -197,7 +197,7 @@ var chests = {
             "id": "reward_pool_event_chest_d_scroll_aquatic"
           },
           {
-            "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",  //
+            "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",  //HOTOVO
             "ec": 45,
             "ep": 2,
             "chances": [
@@ -415,9 +415,7 @@ var chests = {
 }
 
 var specialBuildings = {
-    "A_Evt_Autumn_XXII_Bear_Booster_A":`<h7>Ursa Totem</h7>`,
-    "A_Evt_Autumn_XXII_Bear_Booster_B":`<h7>Mellow Feast</h7>`,
-    "A_Evt_Autumn_XXII_Bear_Booster_C":`<h7>Royal Jelly</h7>`,
+  
 }
 
 // JS CODE
