--- a/guestRaces/guestRacesTabs/ch21/intro.html
+++ b/guestRaces/guestRacesTabs/ch21/intro.html
@@ -6,15 +6,69 @@
     <img id="gr_banner" src="https://i.ibb.co/kxJQxbn/ch20-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
 
     <div style="margin-left: 3%; margin-right: 3%;">
-        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Intro<br></h5>
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Intro ::..<br></h5>
         
-        <i><p class="small-paragraph">ch21_intro_text</p>
+        <i><p class="small-paragraph">CH20_for_now Shortly after the Sorcerers have taken Peregrim into custody and brought him out of the city to discuss his future fate, the Woodelf queen Ahskahala arrives in the city because her husband has not returned. King Aelrindel is still turned into a tree and Ahskahala's magical powers alone cannot solve the curse. For the proud Woodelves it is unthinkable to ask the hated Sorcerers for help. Therefore Ahskahala calls Peregrim's sister Luania from the woods - a powerful Woodelf who can combine the healing powers of Mana and music.</p>
+
+            <p class="small-paragraph">Luania manages to solve Aelrindel's curse with the help of an aria that she holds from a small stage that is set up in the city. Aelrindel and Ahskahala then demand that Dean Durcu surrenders Peregrim to try and punish him according to the laws of their people - that is the least that the Sorcerers can do for the Woodelves after they brought so much mischief over the forest. Durcu agrees to the proposal and has Peregrim brought back to town. Peregrim, cursed and betrayed, is still foaming with rage, but without his magical powers he is no longer a threat to the city. Luania tries to defend her brother: He is not the mad scientist and cold-hearted villain that everyone now sees in him: It is the curse that has clouded his mind, and it is precisely this curse that must now be removed from him. Unfortunately, her magical powers are not enough to free her brother from his curse. It has since eaten too deeply in his heart to hear the healing sounds of Luania's voice.</p>
+
+            <p class="small-paragraph">Will you be able to help Luania prove that her brother is not the evil person everyone thinks he is, or is he exactly what everybody expects, and should he be punished? Find it all out in this new chapter in the story of Elvenar!</p>
         </i>
         <br>
 
-        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">What's new in this chapter?<br></h5>
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left; margin-bottom: 25px;">..:: What's new in this chapter? ::..</h5>
 
-        prosperity (odkial sa ziskava, kde je potrebna, obrazky), community work (odkial sa ziskava, kde je potrebna, obrazky), avatary
+        <div class="container center bg-gradient_background_big_box rounded-bottom90 rounded-top90" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Prosperity<br></h6>
+
+        <center><img src="https://i.ibb.co/H7XcpC4/prosperity-xl.png" style="margin-bottom: 10px;"></center>
+
+        <b>Prosperity</b> is a new requirement next to Culture and Population.
+        It is provided by the core city buildings, such as Main Hall, Barracks, Residences and Workshops. Prosperity will be required from Chapter 21
+        onwards to construct and upgrade Settlement buildings.<br><br>
+
+        After unlocking the very first technology of this chapter, the user interface will get updated so that you can see Prosperity right next
+        to your Culture and Population requirements:<br><br>
+
+        <center><img src="https://i.ibb.co/R07z5Lx/ui-prosperity.png" style="max-width: 40%; border-radius: 8px;"></center><br>
+
+        Click on the drop-down button to select the default displayed requirement and hover over the four-leaf clover to see your current state
+        of all requirements in your city.<br><br>
+
+        <center><img src="https://i.ibb.co/nm9BBTt/ui-hover.png" style="max-width: 45%; border-radius: 8px;"></center><br>
+
+        Note that only buildings upgraded to levels unlocked by Chapter 21 start to provide Prosperity. Make sure you have upgraded some of your core city
+        buildings before you get into building the Vallorian Legend's settlement.<br><br>
+
+        <center><img src="https://i.ibb.co/FWV68jq/residence-upgrade.png" style="max-width: 45%; border-radius: 8px;"></center>
+
+        </div><br>
+
+        <div class="container center bg-gradient_background_big_box rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Community Work<br></h6>
+
+        <center><img src="https://i.ibb.co/R27Kt3k/work-xl.png" style="margin-bottom: 10px;"></center>
+
+        <b>Community Work</b> is a new Discovered Resource (similarly to Orcs, Mana, Seeds and Unurium).
+        It is provided by Residential Buildings, which now offer a switchable production: you can decide, whether your citizens pay taxes or provide
+        Community Work. This resource will be required in many places of the game from Chapter 21 onwards.<br><br>
+
+        <center><img src="https://i.ibb.co/QYRw0gg/residence-community-work.png" style="max-width: 45%; border-radius: 8px;"></center>
+
+        </div><br>
+
+        <div class="container center bg-gradient_background_big_box rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Avatars<br></h6>
+
+        After unlocking this chapter, you receive the following collection of 4 new avatars.<br><br>
+
+        <center><img src="https://i.ibb.co/5T6nNMx/portrait1.png"><img src="https://i.ibb.co/gDBgJwX/portrait2.png">
+            <img src="https://i.ibb.co/6nxpf2T/portrait3.png"><img src="https://i.ibb.co/Lpb9gdc/portrait4.png"></center>
+
+        </div>
         
     </div>
 
