--- a/guestRaces/guestRacesTabs/ch21/intro.html
+++ b/guestRaces/guestRacesTabs/ch21/intro.html
@@ -18,9 +18,9 @@
 
         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left; margin-bottom: 25px;">..:: What's new in this chapter? ::..</h5>
 
-        <div class="container center bg-gradient_background_big_box rounded-bottom90 rounded-top90" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
 
-        <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Prosperity<br></h6>
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Prosperity<br></h5>
 
         <center><img src="https://i.ibb.co/H7XcpC4/prosperity-xl.png" style="margin-bottom: 10px;"></center>
 
@@ -43,25 +43,25 @@
 
         <center><img src="https://i.ibb.co/FWV68jq/residence-upgrade.png" style="max-width: 45%; border-radius: 8px;"></center>
 
-        </div><br>
+        </div>
 
-        <div class="container center bg-gradient_background_big_box rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
 
-        <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Community Work<br></h6>
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Community Work<br></h5>
 
         <center><img src="https://i.ibb.co/R27Kt3k/work-xl.png" style="margin-bottom: 10px;"></center>
 
         <b>Community Work</b> is a new Discovered Resource (similarly to Orcs, Mana, Seeds and Unurium).
         It is provided by Residential Buildings, which now offer a switchable production: you can decide, whether your citizens pay taxes or provide
-        Community Work. This resource will be required in many places of the game from Chapter 21 onwards.<br><br>
+        Community Work. This resource will be required in many places of the game from Chapter 21 onwards!<br><br>
 
         <center><img src="https://i.ibb.co/QYRw0gg/residence-community-work.png" style="max-width: 45%; border-radius: 8px;"></center>
 
-        </div><br>
+        </div>
 
-        <div class="container center bg-gradient_background_big_box rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
 
-        <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Avatars<br></h6>
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Avatars<br></h5>
 
         After unlocking this chapter, you receive the following collection of 4 new avatars.<br><br>
 
