--- a/guestRaces/guestRacesTabs/ch21/intro.html
+++ b/guestRaces/guestRacesTabs/ch21/intro.html
@@ -41,7 +41,7 @@
         Note that only buildings upgraded to levels unlocked by Chapter 21 start to provide Prosperity. Make sure you have upgraded some of your core city
         buildings before you get into building the Vallorian Legend's settlement.<br><br>
 
-        <center><img src="https://i.ibb.co/FWV68jq/residence-upgrade.png" style="max-width: 45%; border-radius: 8px;"></center>
+        <center><img src="https://i.ibb.co/FWV68jq/residence-upgrade.png" style="border: 1px solid black; max-width: 45%; border-radius: 8px;"></center>
 
         </div>
 
@@ -55,7 +55,7 @@
         It is provided by Residential Buildings, which now offer a switchable production: you can decide, whether your citizens pay taxes or provide
         Community Work. This resource will be required in many places of the game from Chapter 21 onwards!<br><br>
 
-        <center><img src="https://i.ibb.co/QYRw0gg/residence-community-work.png" style="max-width: 45%; border-radius: 8px;"></center>
+        <center><img src="https://i.ibb.co/QYRw0gg/residence-community-work.png" style="border: 1px solid black; max-width: 45%; border-radius: 8px;"></center>
 
         </div>
 
