--- a/guestRaces/guestRacesTabs/ch21/intro.html
+++ b/guestRaces/guestRacesTabs/ch21/intro.html
@@ -3,16 +3,14 @@
 <div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: The Vallorian Legend ::..<br></h5>
-    <img id="gr_banner" src="https://i.ibb.co/kxJQxbn/ch20-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
+    <img id="gr_banner" src="https://i.ibb.co/f4FTJcz/ch21-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
 
     <div style="margin-left: 3%; margin-right: 3%;">
         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Intro ::..<br></h5>
         
-        <i><p class="small-paragraph">CH20_for_now Shortly after the Sorcerers have taken Peregrim into custody and brought him out of the city to discuss his future fate, the Woodelf queen Ahskahala arrives in the city because her husband has not returned. King Aelrindel is still turned into a tree and Ahskahala's magical powers alone cannot solve the curse. For the proud Woodelves it is unthinkable to ask the hated Sorcerers for help. Therefore Ahskahala calls Peregrim's sister Luania from the woods - a powerful Woodelf who can combine the healing powers of Mana and music.</p>
+        <i><p class="small-paragraph">Captain Bonkers, leader of the Pirate Guild, pays us a visit and brags that he found a yet unknown island of giant proportions, filled with precious treasures. He offers some mysterious pearls he found there, that are said to bring prosperity to whoever possesses them. While our Mentor is a bit skeptical of buying stuff whose origin is unknown, our Trader is very fascinated and convinces everyone to accept the offer.</p>
 
-            <p class="small-paragraph">Luania manages to solve Aelrindel's curse with the help of an aria that she holds from a small stage that is set up in the city. Aelrindel and Ahskahala then demand that Dean Durcu surrenders Peregrim to try and punish him according to the laws of their people - that is the least that the Sorcerers can do for the Woodelves after they brought so much mischief over the forest. Durcu agrees to the proposal and has Peregrim brought back to town. Peregrim, cursed and betrayed, is still foaming with rage, but without his magical powers he is no longer a threat to the city. Luania tries to defend her brother: He is not the mad scientist and cold-hearted villain that everyone now sees in him: It is the curse that has clouded his mind, and it is precisely this curse that must now be removed from him. Unfortunately, her magical powers are not enough to free her brother from his curse. It has since eaten too deeply in his heart to hear the healing sounds of Luania's voice.</p>
-
-            <p class="small-paragraph">Will you be able to help Luania prove that her brother is not the evil person everyone thinks he is, or is he exactly what everybody expects, and should he be punished? Find it all out in this new chapter in the story of Elvenar!</p>
+            <p class="small-paragraph">Just when Captain Bonkers has left, a horde of dragon-riding Orcs attacks the town, including an angry Orc warlady. It turns out that Captain Bonkers stole the pearls from the warlady of the Orc tribe that lives there - and they followed his traces all the way to your town.</p>
         </i>
         <br>
 
