--- a/guestRaces/guestRacesTabs/ch21/wonders.html
+++ b/guestRaces/guestRacesTabs/ch21/wonders.html
@@ -3,7 +3,7 @@
 <div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: The Vallorian Legend ::..<br></h5>
-    <img id="event_banner" src="https://i.ibb.co/kxJQxbn/ch20-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
+    <img id="event_banner" src="https://i.ibb.co/f4FTJcz/ch21-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
     
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
 
