--- a/guestRaces/guestRacesTabs/ch21/wonders.html
+++ b/guestRaces/guestRacesTabs/ch21/wonders.html
@@ -1,6 +1,14 @@
 <!-- HTML -->
 
-<div id="main">
+<div style="margin-left: 3%; margin-right: 3%; margin-bottom: 5px; text-align: center;">
+
+  This tab will be visible soon! Please come back later.
+
+  <center><img src="https://i.ibb.co/5TvsbBc/lock.png" style="margin-top: 15px;"></center>
+
+</div>
+
+<!--<div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: The Vallorian Legend ::..<br></h5>
     <img id="event_banner" src="https://i.ibb.co/f4FTJcz/ch21-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
@@ -110,7 +118,7 @@
         </table>
       </div>
 
-    <!--na zaciatku pridat nejaky popis o tom, ze tato spriatelena rasa prinasa tieto dva wondery, take a take,
+    na zaciatku pridat nejaky popis o tom, ze tato spriatelena rasa prinasa tieto dva wondery, take a take,
     pre kazdy zrychla popisat ich efekty, dalej ako tieto efekty mozno uzitocne vyuzit, na co a preco su dobre,
     ci by mali byt tieto divy prioritou pre stavbu (ak nie, ci sa radsej oplati pockat na nejaky iny div podobneho typu),
     vysvetlit ako ich efekty v hre vlastne funguju a na zaver spravit nejake moje zhodnotenie tychto divov, teda oznacit
@@ -119,14 +127,14 @@
     html zobrat z textovych navodov napr. pre kitchen event
 
     
-    avatary, vyuzitie tychto divov, hodnotenie-->
+    avatary, vyuzitie tychto divov, hodnotenie
 
      
 
    </div>
    
 
-</div>
+</div>-->
   
 <!-- JS DATABASE -->
 
